# git-disjoint

./: .envrc  .gitignore  .releaserc.json  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  README.md  build.rs  flake.nix  package-lock.json  package.json  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: README.md
demo/: demo.tape  generate.sh  prepare-commits
nix/: default.nix  flake.nix
proptest-regressions/: sanitize_git_branch_name.txt
src/: args.rs  branch_name.rs  cli.rs  default_branch.rs  disjoint_branch.rs  editor.rs  error.rs  execute.rs  fill.rs  git2_repository.rs  github_repository_metadata.rs  increment.rs  interact.rs  issue.rs  issue_group.rs  issue_group_map.rs  lib.rs  little_anyhow.rs  log_file.rs  main.rs  plan.rs  pre_validation.rs  pull_request.rs  pull_request_message.rs  pull_request_metadata.rs  sanitize_git_branch_name.rs  sanitized_args.rs  token.rs  user_config.rs
src/snapshots/: git_disjoint__pull_request__test__build_request_creates_draft_pr.snap  git_disjoint__pull_request__test__build_request_creates_ready_pr.snap  git_disjoint__token__tests__error_display_message.snap
tests/: dirty_repo_guard.rs  fixtures.rs  pull_request_message.rs
tests/common/: mod.rs
tests/fixtures/: all-flag-includes-untagged.kdl  all-flag-includes-untagged.snap  all-same-issue-clean.kdl  all-same-issue-clean.snap  branch-name-collision.kdl  branch-name-collision.snap  clean-split-executes.kdl  clean-split-executes.snap  commit-without-trailer-excluded.kdl  commit-without-trailer-excluded.snap  consecutive-hyphens-elided.kdl  consecutive-hyphens-elided.snap  cross-group-dependency.kdl  cross-group-dependency.snap  delete-vs-modify.kdl  delete-vs-modify.snap  different-regions-no-conflict.kdl  different-regions-no-conflict.snap  empty-plan.kdl  empty-plan.snap  fixtures@all-flag-includes-untagged.kdl.snap  fixtures@all-same-issue-clean.kdl.snap  fixtures@branch-name-collision.kdl.snap  fixtures@clean-split-executes.kdl.snap  fixtures@commit-without-trailer-excluded.kdl.snap  fixtures@consecutive-hyphens-elided.kdl.snap  fixtures@cross-group-dependency.kdl.snap  fixtures@delete-vs-modify.kdl.snap  fixtures@different-regions-no-conflict.kdl.snap  fixtures@empty-plan.kdl.snap  fixtures@github-issue-prefix.kdl.snap  fixtures@jira-ticket-prefix.kdl.snap  fixtures@multiple-commits-same-issue.kdl.snap  fixtures@overlay-combines-issue-groups.kdl.snap  fixtures@same-line-conflict.kdl.snap  fixtures@separate-flag-splits-same-issue.kdl.snap  fixtures@sequential-commits-same-issue.kdl.snap  fixtures@single-commit-executes.kdl.snap  fixtures@single-commit-single-issue.kdl.snap  fixtures@special-chars-sanitized.kdl.snap  (+46 more)
tests/fixtures/branch_names/: consecutive-hyphens-elided.kdl  github-issue-prefix.kdl  jira-ticket-prefix.kdl  special-chars-sanitized.kdl
tests/fixtures/execution/: clean-split-executes.kdl  sequential-commits-same-issue.kdl  single-commit-executes.kdl  validation-failure-prevents-writes.kdl
tests/fixtures/planning/: all-flag-includes-untagged.kdl  (+7 more)
tests/snapshots/: fixtures__branch_names@consecutive-hyphens-elided.kdl.snap  fixtures__branch_names@github-issue-prefix.kdl.snap  fixtures__branch_names@jira-ticket-prefix.kdl.snap  fixtures__branch_names@special-chars-sanitized.kdl.snap  fixtures__execution@clean-split-executes.kdl.snap  fixtures__execution@sequential-commits-same-issue.kdl.snap  fixtures__execution@single-commit-executes.kdl.snap  fixtures__execution@validation-failure-prevents-writes.kdl.snap  fixtures__planning@all-flag-includes-untagged.kdl.snap  fixtures__planning@branch-name-collision.kdl.snap  fixtures__planning@commit-without-trailer-excluded.kdl.snap  fixtures__planning@multiple-commits-same-issue.kdl.snap  fixtures__planning@overlay-combines-issue-groups.kdl.snap  fixtures__planning@separate-flag-splits-same-issue.kdl.snap  fixtures__planning@single-commit-single-issue.kdl.snap  fixtures__planning@two-issues-clean-split.kdl.snap  fixtures__pre_validation@all-same-issue-clean.kdl.snap  fixtures__pre_validation@cross-group-dependency.kdl.snap  fixtures__pre_validation@delete-vs-modify.kdl.snap  fixtures__pre_validation@different-regions-no-conflict.kdl.snap  fixtures__pre_validation@empty-plan.kdl.snap  fixtures__pre_validation@same-line-conflict.kdl.snap  pull_request_message__editor_template_orders_commits_most_recent_first.snap
(+6 files in other folders)
