[package]
name = "git-disjoint"
version = "0.10.331"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "A tool to batch commits by issue into GitHub PRs"
readme = "README.md"
repository = "https://github.com/ericcrosson/git-disjoint"
keywords = ["cli", "git", "pull-request"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json",
  "/rust-toolchain",
  "/assets"
]

[dependencies]
clap = { version = "=4.5.56", features = ["cargo", "derive", "env", "wrap_help"] }
parse-git-url = "=0.5.1"
git2 = { version = "=0.20.4", default-features = false, features = ["zlib-ng-compat"] }
indexmap = "=2.13.0"
indicatif = "=0.18.3"
inquire = "=0.9.2"
open = "=5.3.3"
regex = "=1.12.2"
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sanitize-git-ref = "=1.0.12"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[dev-dependencies]
proptest = "=1.9.0"
proptest-derive = "=0.7.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
clap = { version = "=4.5.56", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "=4.5.65"
clap_mangen = "=0.2.31"
