[package]
name = "git-disjoint"
version = "0.16.0"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "A tool to batch commits by issue into GitHub PRs"
readme = "README.md"
repository = "https://github.com/ericcrosson/git-disjoint"
keywords = ["cli", "git", "pull-request"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json",
  "/rust-toolchain",
  "/assets",
  "/demo"
]

[dependencies]
clap = { version = "=4.6.0", features = ["cargo", "derive", "env", "wrap_help"] }
parse-git-url = "=0.5.1"
git2 = { version = "=0.20.4", default-features = false, features = ["zlib-ng-compat"] }
indexmap = "=2.14.0"
indicatif = "=0.18.4"
inquire = "=0.9.4"
open = "=5.3.3"
regex = "=1.12.3"
reqwest = { version = "=0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
sanitize-git-ref = "=1.0.12"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[dev-dependencies]
insta = { version = "=1.47.2", features = ["glob"] }
kdl = "=6.5.0"
proptest = "=1.11.0"
proptest-derive = "=0.8.0"
tempfile = "=3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
clap = { version = "=4.6.0", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "=4.6.1"
clap_mangen = "=0.2.33"
