[package]
name = "git-disjoint"
version = "0.16.7"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "A tool to batch commits by issue into GitHub PRs"
readme = "README.md"
repository = "https://github.com/ericcrosson/git-disjoint"
keywords = ["cli", "git", "pull-request"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json",
  "/rust-toolchain",
  "/assets",
  "/demo",
]

[dependencies]
clap = { version = "=4.6.2", features = [
  "cargo",
  "derive",
  "env",
  "wrap_help",
] }
parse-git-url = "=0.6.1"
git2 = { version = "=0.20.4", default-features = false, features = [
  "zlib-ng-compat",
] }
indexmap = "=2.14.0"
indicatif = "=0.18.6"
inquire = "=0.9.4"
open = "=5.4.0"
regex = "=1.13.1"
reqwest = { version = "=0.13.4", default-features = false, features = [
  "blocking",
  "json",
  "rustls",
] }
sanitize-git-ref = "=1.0.12"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"

[dev-dependencies]
insta = { version = "=1.48.0", features = ["glob"] }
kdl = "=6.0.0"
proptest = "=1.11.0"
proptest-derive = "=0.8.0"
tempfile = "=3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
clap = { version = "=4.6.2", features = ["cargo", "derive", "wrap_help"] }
clap_complete = "=4.6.7"
clap_mangen = "=0.2.33"
